--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,7 +105,7 @@ exclude_lines = [
 
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "0.1.0"
+version = "0.2.0"
 tag_format = "$version"
 version_files = [
     "src/uc_tools/__about__.py"
@@ -125,9 +125,9 @@ addopts = [
     "--exitfirst",
     "--failed-first",
     "--strict-markers",
-    "--cov=src/uc_tools",
-    "--cov-report=xml",
-    "--cov-report=term-missing",
+    # "--cov=src/uc_tools",
+    # "--cov-report=xml",
+    # "--cov-report=term-missing",
     "-s",
 ]
 pythonpath = [
